--- a/styles.css
+++ b/styles.css
@@ -346,7 +346,7 @@ width: 370px;
 .svg_link_i:hover,
 .svg_link_i:focus {
   background-color: var(--main--color);
-  fill: var(--secondary-color);
+  fill: var(--third-color);
 }
 .svg_list_i_c > .svg_link_i_c {
   display: flex;
@@ -392,7 +392,7 @@ width: 370px;
   border: 1px solid #AFB1B8;
 box-sizing: border-box;
 border-radius: 4px;
-  fill: #afb1b8;
+  fill: var(--third-color);
 }
 .icon_color:hover,
 .icon_color:focus,
@@ -406,10 +406,14 @@ border-radius: 4px;
   fill:#AFB1B8;;
 }
 
+.svg_padding{
+margin-left: 15px;
+margin-right: 15px;
+}
 .svg_link_i_c:hover,
 .svg_link_i_c:focus {
   background-color: var(--main--color);
-  fill: var(--secondary-color);
+  fill: var(--third-color);
 }
 .boxWtxt1 {
   margin-top: 30px;
